samples/_failures_safe/1760887442_80e0bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76bab991.c: In function ‘tokenize’:
./samples/SAFE/__tmp_76bab991.c:153:9: error: expected declaration or statement at end of input
  153 |         (*token_count)++;
      |         ^
./samples/SAFE/__tmp_76bab991.c:153:9: error: expected declaration or statement at end of input
